src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>On-site Training</fullName>
        <description>Used in all On-site specific deals</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Airport_Drive_time__c</fullName>
        <inlineHelpText>Driving time from airport to training site</inlineHelpText>
        <label>Airport Drive-time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auto_CloseDate__c</fullName>
        <label>Auto CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDR_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BDR responsible for converting the lead</description>
        <label>BDR Source</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.INACTIVE_CONTACT__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>PLEASE SEARCH BY THE FIRST TWO OR THREE LETTERS OF: USD, Canadian, British Pound, New Zealand, OR Australian</inlineHelpText>
        <label>Billing Currency</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select an Active Billing Currency to continue.</errorMessage>
            <filterItems>
                <field>Currency_Detail__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator, Operations</value>
            </filterItems>
            <infoMessage>Please select an Active Billing Currency to continue.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Currency_Detail__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bullets_Page_Numbers__c</fullName>
        <inlineHelpText>List info to be used from each topic</inlineHelpText>
        <label>Bullets/Page Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buzz_words__c</fullName>
        <inlineHelpText>List of common words or terms used in this industry</inlineHelpText>
        <label>Buzz words</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee__c</fullName>
        <formula>Amount /2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Notes__c</fullName>
        <label>Closed Lost Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Abandonment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expertise/Solution Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Working w/ DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Combined_LOA_verbiage__c</fullName>
        <formula>&apos;Account: &apos; &amp;  Account.Entity_specific_LOA_verbiage__c 
&amp; BR () &amp; 
&apos;DM: &apos; &amp; Decision_Maker__r.Contact_Specific_LOA_Verbiage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined LOA verbiage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_NDA_Received_Date__c</fullName>
        <formula>text ( Account.NDA_Received_Date__c )
&amp; text (Decision_Maker__r.NDA_Received_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined NDA Received Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Payable_Period__c</fullName>
        <formula>&apos;Account: &apos; &amp; text ( Account.NDA_Received_Date__c ) 
&amp; BR() &amp; 
&apos;DM: &apos; &amp; text (Decision_Maker__r.NDA_Received_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-fills from Payable Period on Account record</inlineHelpText>
        <label>Combined Payable Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Scheduling_Notes__c</fullName>
        <formula>&apos;Account: &apos; &amp; (  Account.Scheduling_Notes__c  ) 
&amp; BR() &amp; 
&apos;DM: &apos; &amp; (Decision_Maker__r.Contact_Specific_Scheduling_Notes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Scheduling Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Tax_Exempt_No__c</fullName>
        <formula>&apos;Account: &apos; &amp; ( Account.Tax_Exempt_No__c ) 
&amp; BR() &amp; 
&apos;DM: &apos; &amp;  ( Decision_Maker__r.Tax_Exempt_No__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Tax Exempt No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Trainer_Notes__c</fullName>
        <formula>&apos;Account: &apos; &amp; (   Account.Trainer_Notes__c   ) 
&amp; BR() &amp; 
&apos;DM: &apos; &amp; (Decision_Maker__r.Contact_Specific_Trainer_Notes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Trainer Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Travel_Notes__c</fullName>
        <formula>&apos;Account: &apos; &amp; (    Account.Account_Level_Travel_Notes__c    ) 
&amp; BR() &amp; 
&apos;DM: &apos; &amp; (Decision_Maker__r.Contact_Specific_Travel_Notes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Travel Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_wide_Initiatives__c</fullName>
        <inlineHelpText>Describe any initiatives that this training may address.</inlineHelpText>
        <label>Company-wide Initiatives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <formula>IF(  
 AND(Tax_Calculation__c &lt;&gt;0 ,Currency_Conversion__c &lt;&gt; 0), 
  Tax_Calculation__c + Currency_Conversion__c,
Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If there&apos;s , use the Opportunity Amount, otherwise use Currency Conversion plus Tax Calculation</inlineHelpText>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <inlineHelpText>Date contract generated &amp; sent to client</inlineHelpText>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <formula>Billing_Currency__r.Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-filled from Currency Detail, one Dollar to currency</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Additional_Attendee__c</fullName>
        <defaultValue>75</defaultValue>
        <label>Cost Per Additional Attendee</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Conversion__c</fullName>
        <formula>IF(Conversion_Rate__c &lt;&gt;0,
(Amount * Conversion_Rate__c),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Deal Amount times Conversion Rate plus Amount, if Conversion rate has a value</inlineHelpText>
        <label>Billing Currency Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Issues__c</fullName>
        <inlineHelpText>What are the organizational issues prompting this event?</inlineHelpText>
        <label>Current Issues</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Options_Available__c</fullName>
        <formula>IF( ISBLANK( Date_Options__c ) , FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-checked when the Date Options field is completed</inlineHelpText>
        <label>Date Options Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Options__c</fullName>
        <inlineHelpText>If there is date flexibility, please provide the options here.</inlineHelpText>
        <label>Date Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.INACTIVE_CONTACT__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_level__c</fullName>
        <inlineHelpText>Bachelor&apos;s degree, or higher or lower</inlineHelpText>
        <label>Education level?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_for_Opp_Owner_s_Manager__c</fullName>
        <label>Email for Opp Owner&apos;s Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Adjustment__c</fullName>
        <defaultValue>750</defaultValue>
        <label>Change Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Day__c</fullName>
        <formula>Contract_Amount__c /  TotalOpportunityQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Amount divided by the Quantity entered by the rep</inlineHelpText>
        <label>Fee/Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Per_Day__c</fullName>
        <label>Fee Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_up_training_development__c</fullName>
        <inlineHelpText>What kind of follow-up training and development will this group receive?</inlineHelpText>
        <label>Follow-up training/development</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Development__c</fullName>
        <inlineHelpText>What are the company&apos;s future training and staff development plans?</inlineHelpText>
        <label>Future Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Session_Notes__c</fullName>
        <inlineHelpText>Available for additional information not collected like special requests, etc.</inlineHelpText>
        <label>General/Trainer Session Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_communication__c</fullName>
        <inlineHelpText>Who does the group communicate with most often?</inlineHelpText>
        <label>Group communication</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Expenses_USD__c</fullName>
        <label>Hard Expenses (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Recommendation__c</fullName>
        <inlineHelpText>The Client&apos;s recommended hotel</inlineHelpText>
        <label>Hotel Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Content__c</fullName>
        <inlineHelpText>What are the most important sections of content to be covered in this program?</inlineHelpText>
        <label>Important Content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Hard_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Hard Expenses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues_trends_affecting_group__c</fullName>
        <inlineHelpText>List any issues or trends that may be affecting this group:</inlineHelpText>
        <label>Issues/trends affecting group</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Record_Type_Name__c</fullName>
        <label>Original Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_SLX_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy SLX ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Supervision__c</fullName>
        <inlineHelpText>1st, middle, senior</inlineHelpText>
        <label>Level of Supervision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logistical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used only if different than the DM</inlineHelpText>
        <label>Logistical Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Logistical Contact)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <label>Manager ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <inlineHelpText>Auto-filled by system at time of Close/Won.</inlineHelpText>
        <label>Manager Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Attendees__c</fullName>
        <description>Please enter the maximum number of attendees for this event. Additional attendees will need to be charged as a separate line item.</description>
        <inlineHelpText>Please enter the maximum number of attendees for this event. Additional attendees will need to be charged as a separate line item.</inlineHelpText>
        <label>Max # Attendees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Sales Rep</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_Roles_Assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Custom_Content_Items__c</fullName>
        <label>Number of Custom Content Items</label>
        <summaryForeignKey>Custom_Content_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Opp_Products__c</fullName>
        <label># of Opp Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_TE_Days_Created__c</fullName>
        <label>Number of TE Days Created</label>
        <summarizedField>Training_Event__c.Training_Num_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Event__c.Number_of_Non_Standard_Workbooks__c</field>
            <operation>equals</operation>
            <value>5000</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Event__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_TE_Days_Remaining__c</fullName>
        <formula>Number_of_TE_Days_Created__c -  Product_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of TE Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Once the Training Event record is created, the Opportunity is locked down &amp; this box is checked</inlineHelpText>
        <label>Opportunity Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power of One</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Sale_Trainer_Info__c</fullName>
        <label>Pre-Sale Trainer Info</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Sale_Trainer_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Sale Trainer Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PricebookIDforFormula__c</fullName>
        <description>Pricebook2Id is not working in Formula, so this fields is used as a work around</description>
        <formula>Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PricebookIDforFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <label>Primary Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ken Blanchard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center for Creative Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornerstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dale Carnegie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin Covey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fred Pryor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvard Business School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Concepts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skillsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained Internally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Training_on_Topic__c</fullName>
        <inlineHelpText>Remember to provide what type of training and when</inlineHelpText>
        <label>Prior Training on Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantity__c</fullName>
        <label>Total Number of Days</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Projector_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projector Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter_Sold__c</fullName>
        <label>Quarter Sold</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Upon marking this, a notification is sent to Operations to inform them of a new Training Event(s) to create.</inlineHelpText>
        <label>Ready to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Client&apos;s recommended hotel</inlineHelpText>
        <label>Recommended Hotel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities Listing Hotel</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Trainer lead referral</description>
        <label>Referring Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>001G000001m505R</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Referring Trainer)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Tax_Rate__c</fullName>
        <formula>Training_Location_Tax__r.Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-filled from Currency Detail</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scheduling_Detail__c</fullName>
        <formula>Account.Scheduling_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Attention_Line__c</fullName>
        <label>Shipping Attention Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Shipping Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Terms__c</fullName>
        <formula>Account.Special_Billing_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from Account record&apos;s Special Billing Terms field</inlineHelpText>
        <label>Special Billing Terms</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>